# traybiff

./: .gitignore  CMakeLists.txt  README.md  lsan.supp
src/: CAbout.cpp  CAbout.h  CMailApp.cpp  CMailApp.h  CMakeLists.txt  IAbout.ui  resources.qrc  traybiff.cpp  traybiff.h
src/data/: traybiff.desktop
src/protocols/: CCrypt.cpp  CCrypt.h  CImap.cpp  CImap.h  CMailMonitor.cpp  CMailMonitor.h  CMailSocket.cpp  CMailSocket.h  CPop3.cpp  CPop3.h  IMailProtocol.h
src/setup/: CConfig.cpp  CConfig.h  CKeyChain.cpp  CKeyChain.h  CSetupDialog.cpp  CSetupDialog.h  ISetupDialog.ui
src/systemtray/: CTrayMenu.cpp  CTrayMenu.h
